tests/NormalTests/paczka1/fuzzy1/66025815.err
Error in line 22: EFh A368 188,1
Error in line 24: EFh S703 99,5
Error in line 37: çEFh
Error in line 36: S703 S703 58,2
